chore: netlify and cms

--- a/src/content/releases/1.0.md
+++ b/src/content/releases/1.0.md
@@ -4,6 +4,7 @@ createdAt: '2014-10-05T19:43:07.130Z'
 slug: '1.0'
 tags: 'nomie, dev, history'
 description: 'How it all started'
+version: '1.0'
 ---
 
 ## This post was originally release in 2014 on a now dead Nomie server.
