--- a/src/content/releases/3.0.md
+++ b/src/content/releases/3.0.md
@@ -4,6 +4,7 @@ slug: '3.0'
 createdAt: '2018-08-09T19:43:07.130Z'
 tags: 'nomie, release'
 image: 'https://snaps.nomie.io/Screen-Shot-2018-09-27-15-24-50.jpg'
+version: '3.0'
 ---
 
 ![OMG NOMIE 3 IS AVAIL FOR IOS](https://snaps.nomie.io/Screen-Shot-2018-09-20-20-27-34.png)
