--- a/src/content/releases/3.1.md
+++ b/src/content/releases/3.1.md
@@ -4,6 +4,7 @@ slug: '3.1'
 createdAt: '2018-09-16T19:43:07.130Z'
 tags: 'nomie, release'
 image: 'https://snaps.nomie.io/Screen-Shot-2018-09-16-18-53-40.png'
+version: '3.1'
 ---
 
 It's been around a month since I released Nomie 3 on iOS. Feedback has been really great, and the downloads are are happening. All in all, I'm happy with the progress of Nomie 3.
