--- a/src/content/releases/4.1.md
+++ b/src/content/releases/4.1.md
@@ -4,6 +4,7 @@ slug: '4.1'
 createdAt: '2019-08-25T19:43:07.130Z'
 tags: 'nomie, release'
 image: 'https://snaps.nomie.io/Screen-Shot-2018-09-27-15-24-50.jpg'
+version: '4.1'
 ---
 
 ## Nomie 4.1 Release
