--- a/src/content/releases/4.4.md
+++ b/src/content/releases/4.4.md
@@ -4,6 +4,7 @@ createdAt: '2019-11-03T19:43:07.130Z'
 slug: '4.4'
 tags: 'nomie, release'
 image: 'https://shareking.s3.amazonaws.com/Screen-Shot-2019-11-03-11-32-37.71.png'
+version: '4.4'
 ---
 
 ## Nomie 4.4.0
