--- a/src/content/releases/5.3.md
+++ b/src/content/releases/5.3.md
@@ -4,6 +4,7 @@ createdAt: '2020-08-10T19:43:07.130Z'
 description: 'Dashboards, Patreon, On This Day, Chart.js'
 tags: 'nomie, test'
 slug: '5.3'
+version: '5.3'
 ---
 
 # Nomie 5.3 is official 🥳
