--- a/src/content/releases/5.5.md
+++ b/src/content/releases/5.5.md
@@ -3,6 +3,7 @@ title: '5.5'
 description: 'Journal mode, better search, new history view'
 createdAt: '2020-11-09T00:14:41.516Z'
 slug: '5.5'
+version: '5.5'
 ---
 
 ## Happy to finally push 5.5 to production! 🥳
