--- a/src/content/releases/5.0.md
+++ b/src/content/releases/5.0.md
@@ -5,6 +5,7 @@ createdAt: '2020-04-25T19:43:07.130Z'
 tags: 'nomie, release'
 description: 'Nomie is going open source on Svelte'
 image: 'https://shareking.s3.amazonaws.com/Screen-Shot-2019-11-03-11-32-37.71.png'
+version: '5.0'
 ---
 
 ## Nomie 5!
