--- a/src/content/releases/5.4.md
+++ b/src/content/releases/5.4.md
@@ -2,6 +2,7 @@
 title: '5.4'
 createdAt: '2020-09-22T19:43:07.130Z'
 description: 'Searching, Offline Queue, Improved design'
+version: '5.4'
 ---
 
 # Nomie 5.4 Features
