chore: adding faq, and routes

--- a/src/content/releases/3.0.md
+++ b/src/content/releases/3.0.md
@@ -2,6 +2,7 @@
 title: '3.0'
 slug: '3.0'
 createdAt: '2018-08-09T19:43:07.130Z'
+description: 'Nomie goes native with React-Native'
 tags: 'nomie, release'
 image: 'https://snaps.nomie.io/Screen-Shot-2018-09-27-15-24-50.jpg'
 version: '3.0'
@@ -11,7 +12,7 @@ version: '3.0'
 
 TL;DR: Nomie 3 is ready for iOS, [view it in the App Store](https://itunes.apple.com/us/app/nomie-3/id1350582411?ls=1&mt=8)
 
-<a href="/podcast/16-nomie-release-3-for-ios-is" class="n-button">Hear me talk about it on Eps.16</a>
+<a href="https://soundcloud.com/nomiepodcast/16-nomie-release-3-for-ios-is" class="n-button">Hear me talk about it on Eps.16</a>
 
 Just [8 months ago I walked away from Nomie](https://www.reddit.com/r/nomie/comments/7cyi01/this_feels_like_the_end/), only to quickly realize how much I needed it. [I went back to the drawing board](https://www.reddit.com/r/nomie/comments/7hl2th/this_feels_like_the_beginning/), and starting from scratch started creating a new vision for Nomie.
 
