--- a/src/content/releases/3.1.md
+++ b/src/content/releases/3.1.md
@@ -30,4 +30,4 @@ In this release, I fixed a handful of annoying little bugs.
 - Added description to stats panel
 - Note Tracking now will add # where you're cursor is focused, instead of just the end of the note.
 
-[To learn more about Nomie check out the faq](/nomie3-help/)
+[To learn more about Nomie check out the faq](/faq)
