chore: adding links to other releases

--- a/src/content/releases/4.0.md
+++ b/src/content/releases/4.0.md
@@ -7,7 +7,7 @@ tags: 'nomie, release'
 version: '4.0'
 ---
 
-# Nomie 4.0 - Leaving the App Stores and going Open... (Killing Nomie Native)
+# Leaving the App Stores and going Open... (Killing Nomie Native)
 
 ## Why is Nomie no longer available in the AppStore or Google Play?
 
