--- a/src/content/releases/5.3.md
+++ b/src/content/releases/5.3.md
@@ -23,7 +23,7 @@ The dashboard is finally here. Based on Nomie 3's "custom stat widgets", the Das
 
 ![](https://shareking.s3.amazonaws.com/Screen-Shot-2020-08-10-13-25-40.88-1597080347.png)
 
-## [Nomie's on Patreon](https://www.patreon.com/nomieapp "Nomie's on Patreon")
+## [Nomie on Patreon](https://www.patreon.com/nomieapp 'Nomie on Patreon')
 
 For those fan's who'd like to support me and the continual development of Nomie, we now have a Patreon. Nomie Patrons get access to early feature release concepts, voting on features, some dope reddit flair, and priority support and feature requests.
 
@@ -78,17 +78,10 @@ if you are using local storage - you're never going to forget to backup again. I
 ## Other notable changes:
 
 - **Small Tracker Buttons** are now device dependent - so on your tablet you can have full buttons, and small buttons on your phone (if you want)
-
 - **Improved Importing** - Importing has been completely refactored to be easy to work with, and will offer some cool flexibility for future releases.
-
 - **Improved Tracker Inputing** - unique combinations of Picker Lists and Multi Trackers should all work as expected now
-
 - **Start of Week** - thanks to @sanderboom's work on adding "Start of Week" option!
-
 - Improved "What's new" Dialog
-
 - **Improved Settings View**
-
 - **Picker List can now be edited as text** (for those super long lists)
-
 - **Migration to Typescript has begun**! Typescript makes working on large javascript code bases much easier and less error prone.
