style: updating styles

--- a/content/releases/5.4.md
+++ b/content/releases/5.4.md
@@ -5,21 +5,33 @@ description: 'Searching, Offline Queue, Improved design'
 version: '5.4'
 ---
 
-**Improved Search** - you can now search using AND and OR. For example "@mom OR @dad" or "@mom AND dinner".
+## Improved Search
 
-**Saved Search Terms** - search is it's own dedicated view, that starts off with a list of your previous searches
+You can now search using AND and OR. For example "@mom OR @dad" or "@mom AND dinner".
 
-**Offline Save Queue:** If you use Blockstack, and you’re internet drops, logs will now be saved to an offline queue, that you can sync to Blockstack when you come back online.
+## Saved Search Terms
 
-**Faster Date/Time changing**: Tap the ••• more ball, and quickly change the day using arrows, tap the hour, or minutes to change
+Search is it's own dedicated view, that starts off with a list of your previous searches
+
+## Offline Save Queue:
+
+If you use Blockstack, and you’re internet drops, logs will now be saved to an offline queue, that you can sync to Blockstack when you come back online.
+
+## Faster Date/Time changing
+
+Tap the ••• more ball, and quickly change the day using arrows, tap the hour, or minutes to change
 
 ![](https://shareking.s3.amazonaws.com/Screen-Shot-2020-09-20-17-05-55.77-1600635979.png 'Better Time Changing')
 
-**Better Tab Design**: Both trackers and dashboards now use the same design pattern
+## Better Tab Design
 
-**On Ctrl+Enter:** On enter+command or enter+ctrl will now save the note.
+Both trackers and dashboards now use the same design pattern
 
-**Dashboard Improvements**
+## On Ctrl+Enter:
+
+On enter+command or enter+ctrl will now save the note.
+
+## Dashboard Improvements
 
 - Line Chart Widget
 - Quickly change widget sizes
@@ -27,15 +39,17 @@ version: '5.4'
 - Min-Max Widget
 - Duplicate / Move widgets to different tab
 
-**Better Positivity Selector**
+## Better Positivity Selector
 
 ![](https://shareking.s3.amazonaws.com/Screen-Shot-2020-09-20-17-04-57.79-1600635906.png 'Better Positivity Selector')
 
-**Location Saving:** Have an unnamed location? Now you can hit Save..., and give it a name.
+## Location Saving
+
+Have an unnamed location? Now you can hit Save..., and give it a name.
 
 ![](https://shareking.s3.amazonaws.com/Screen-Shot-2020-09-20-17-08-19.25-1600636106.png 'Save location')
 
-Other **Improvements**
+## Other **Improvements**
 
 - Better handling of local time and date formatting
 - UI Ripples
