--- a/content/releases/5.5.md
+++ b/content/releases/5.5.md
@@ -6,9 +6,9 @@ slug: '5.5'
 version: '5.5'
 ---
 
-# 5.5 IS FINALLY LIVE! 🥳
+# 5.5 is officially live 🥳
 
-See it at <https://v5.nomie.app> or learn more about what Nomie is at <https://nomie.app>
+Another Covid release is complete! See it at <https://v5.nomie.app> or learn more about what Nomie is at <https://nomie.app>
 
 ## Journal Mode
 
