style: updating tracker library look

--- a/content/releases/2.0.md
+++ b/content/releases/2.0.md
@@ -15,37 +15,37 @@ What's new in this version of Nomie:
 
 Previous Nomie was very AM/PM centric, this version brings the option to switch between AM/PM or 24H.
 
-![24h Time setting in Nomie](http://snap.nomie.io/Screen-Shot-2017-02-27-19-03-09.png)
+![24h Time setting in Nomie](https://snap.nomie.io/Screen-Shot-2017-02-27-19-03-09.png)
 
 ## Popular Hashtags
 
 I've rewritten the hashtag indexer - it's now much faster, requires less space and works in real time. This upgrade also allowed me to bring back the "Popular Tags" tab of yesteryear.
 
-![Mood diary popular hashtags](http://snap.nomie.io/Screen-Shot-2017-02-27-19-05-11.png)
+![Mood diary popular hashtags](https://snap.nomie.io/Screen-Shot-2017-02-27-19-05-11.png)
 
 ## Ignoring Zeros
 
 For trackers like Weight, you need the ability to ignore days you don't track - now you can. Slider and Number trackers have the option to "Ignore Zeros"
 
-![Nomie tracking Advanced options](http://snap.nomie.io/Screen-Shot-2017-02-27-19-10-04.png)
+![Nomie tracking Advanced options](https://snap.nomie.io/Screen-Shot-2017-02-27-19-10-04.png)
 
 ## Improved Tracker Stats
 
 Landscape those stats!
 
-![Nomie 2.0.3 horizontal tracker stats](http://snap.nomie.io/Screen-Shot-2017-02-27-19-20-49.png)
+![Nomie 2.0.3 horizontal tracker stats](https://snap.nomie.io/Screen-Shot-2017-02-27-19-20-49.png)
 
 Overall design improvements continue on the Stats Overview screen, focusing on flexibility across multiple devices and tracker / uom types.
 
-![](http://snap.nomie.io/Screen-Shot-2017-02-27-19-17-23.png)
+![](https://snap.nomie.io/Screen-Shot-2017-02-27-19-17-23.png)
 
 Nomie now includes the value of the first and last time you tracked.
 
-![](http://snap.nomie.io/Screen-Shot-2017-02-27-19-17-47.png)
+![](https://snap.nomie.io/Screen-Shot-2017-02-27-19-17-47.png)
 
 Charts have been given an overhaul and now allow you to pick the type of chart, if the data is grouped, and if the data should be balanced (to level out 2 different datasets with large variations)
 
-![Comparing two life trackers with Nomie](http://snap.nomie.io/Screen-Shot-2017-02-27-19-12-58.png)
+![Comparing two life trackers with Nomie](https://snap.nomie.io/Screen-Shot-2017-02-27-19-12-58.png)
 
 ## CouchDB Syncing Improvements
 
